style(iFrame): fix player not hidden by psuedo

--- a/src/film-database/features/iframe/_fdiFrame.scss
+++ b/src/film-database/features/iframe/_fdiFrame.scss
@@ -35,7 +35,7 @@
     &::after {
       content: '';
       position: absolute;
-      left: 0;
+      left: -1px;
       top: 0;
       width: 15%;
       height: 100%;
